--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
     <h3>Ami ja ke tomar</h3>
     <h3>Sokhi valobasha kare koy</h3>
     <p>jara nij iccai bash khaite cai tarai valobse</p>
+
+    <img src="myy.jpg" width="500" alt="">
+
 </body>
 </html>
