--- a/index.html
+++ b/index.html
@@ -4,12 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>my third repo</title>
+    <title>my tohird bandopi rep</title>
 </head>
 <body>
+    <h1>Ami tare Valo bashi</h1>
     <h3>Ami ja ke tomar</h3>
     <h3>Sokhi valobasha kare koy</h3>
     <p>jara nij iccai bash khaite cai tarai valobse</p>
+
+    <div>
+        <h1>Blog</h1>
+        <strong>Tarveling Aouthor Rabiul Islam</strong>
+        <p>This is my first Blog.My first tarvel in Rajshahi dectric Mohadevpur thant</p>
+
+    </div>
+    
 
     <img src="myy.jpg" width="500" alt="">
 
