--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
 
     <div>
         <h1>Blog</h1>
+        <h3>Look mama, I acan write a blog</h3>
         <strong>Tarveling Aouthor Rabiul Islam</strong>
-        <p>This is my first Blog.My first tarvel in Rajshahi dectric Mohadevpur thant</p>
+        <p>This is my first Blog.My first tarvel in Rajshahi dectric Mohadevpur thant Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos suscipit eveniet temporibus ipsa quisquam et fugiat enim perspiciatis alias est. Aut pariatur quod, animi unde minus deleniti rem quis cumque?</p>
 
     </div>
     
